2001-12-11  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_url.c (bk_url_parse): Correct for ipv6.

2001-12-10  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_string.c (bk_strdelim): new function to return first
	position in s *not* in string s1.
	(bk_strndup): Like strdup but only do n chars.

	* lib/b_url.c: File for url munging.
	(bk_url_parse): Seth's alg. (at least mostly done).

	* include/libbk.h (struct bk_version): bk_version stuff added.

2001-12-06  James Tanis  <jtt@winwood.sysdetect.com>

	* libbk: many other dumb insight related cleanup.

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Prevent
	memory leack in accept state.

2001-12-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_memx.c (bk_memx_get): Return current used, not current allocated

	* lib/b_general.c (bk_general_init): Insight does some really stupid things.

2001-12-05  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_config.c: Make sure that bc is checked after SET_CONFIG

2001-12-04  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netutils.c (bk_netutils_start_service_verbose): Null out
	the appropriate things at the appropriate time to avoid double free.

	* libbk: (everwhere) Replace XXX's with standards document
	compliant notation

	* include/libbk.h: Camel case and _e all enums (propogate through
	source files too).
	Change callback_t's to callback_f's (propogate).

2001-11-30  Seth Robertson  <seth@startide.sysdetect.com>

	* README.i18n: Internationalization hints
	* src/proto.c: Internationalized
	* include/libbk_i18n.h: Starting formal internalization support

2001-12-04  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c (connect_complete): Check for bag's existence as per
	the API

	* lib/b_netinfo.c (bk_netinfo_from_socket): make sure len is
	initialized (jtt must have dropped this somewhere today).

	* src/bttcp.c (proginit): Patch up old service staring names to
	new. 

	* lib/b_netutils.c (bk_parse_endpt_no_defaults): Convenience